fix(eighth): don't show scrollbars when resizing eighth admin page
The eighth admin page is able to adapt to a range of screen sizes, but
there are some size ranges where horizontal scrollbars are shown despite
having enough screen space to avoid this.

--- a/intranet/static/css/eighth.admin.scss
+++ b/intranet/static/css/eighth.admin.scss
@@ -171,7 +171,7 @@ table.choose-fields td {
     text-align: center;
 }
 
-@media (max-width: 835px) {
+@media (max-width: 945px) {
     .primary-content .admin-dashboard #add-room-form {
         #id_name {
             width: 60px;
@@ -184,7 +184,7 @@ table.choose-fields td {
     }
 }
 
-@media (max-width: 750px) {
+@media (max-width: 785px) {
     tr .admin-section {
         &:last-of-type:not(:first-of-type) {
             padding-left: 5px;
